<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_star_24px"
        android:title="@string/favorite"
        android:contentDescription="@string/favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_24px"
        android:title="@string/share"
        android:contentDescription="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/settings"
        android:contentDescription="@string/settings"
        app:showAsAction="ifRoom" />

</menu>